# pytest-mypy

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  changelog.md  mkdocs.yml  pyproject.toml  pytest_mypy.py  setup.py  tox.ini
.github/workflows/: publication.yaml  publication.yml  validation.yaml  validation.yml
docs/: index.md
src/: pytest_mypy.py
src/pytest_mypy/: __init__.py
tests/: conftest.py  test_pytest_mypy.py
