[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm >= 7.1", "wheel >= 0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-mypy"
dynamic = ["version"]
description = "A Pytest Plugin for Mypy"
readme = "README.rst"
license = {file = "LICENSE"}
maintainers = [
    {name = "David Tucker", email = "david@tucker.name"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.7"
dependencies = [
    "attrs>=19.0",
    "filelock>=3.0",
    "pytest>=4.6; python_version<'3.10'",
    "pytest>=6.2; python_version>='3.10'",
    "mypy>=0.500; python_version<'3.8'",
    "mypy>=0.700; python_version>='3.8' and python_version<'3.9'",
    "mypy>=0.780; python_version>='3.9' and python_version<'3.11'",
    "mypy>=0.900; python_version>='3.11'",
]

[project.urls]
homepage = "https://github.com/realpython/pytest-mypy"

[project.entry-points.pytest11]
mypy = "pytest_mypy"

[tool.setuptools_scm]
